syntax = "proto3";

package banking;

option go_package = "pb/bank-application/pb";

message ReshardMove {
  int32 account      = 1;
  int32 from_cluster = 2;
  int32 to_cluster   = 3;
}

message GetReshardPlanRequest {}

message GetReshardPlanResponse {
  repeated ReshardMove moves = 1;
}

message PerformanceRequest {
  int32 set = 1; // 0 = most recent completed set
}

message PerformanceResponse {
  double throughput = 1;
  double avg_latency_ms = 2;
  int32  ops = 3;
}

service ClientControl {
  rpc GetReshardPlan(GetReshardPlanRequest) returns (GetReshardPlanResponse);
  rpc Performance(PerformanceRequest) returns (PerformanceResponse);
}
